--- a/assets/css/componentes/cabecalho.css
+++ b/assets/css/componentes/cabecalho.css
@@ -1,6 +1,6 @@
 
 .cabecalho {
-    background-color: #fff;
+    background-color: var(--cor-contraste-claro);
     border-radius: 0 0 10px 10px;
     box-shadow: var(--sombra);
     display: flex;
